bpo-39511: Add Py_GetNone() and Py_GetNoneRef() functions

* Add PyInterpreterState.none field
* Add _Py_InitSingletons() and _Py_FiniSingletons()
* Remove _Py_NoneStruct from the public C API.